# npdb

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  setup.cfg  setup.py
docs/: Makefile
docs/source/: conf.py  index.rst  install.rst  license.rst  overview.rst  tutorial.rst
docs/source/reference/: dbarray.rst  index.rst
npdb/: __init__.py
npdb/core/: arraymap.py  config.py  core.py  diskmap.py  index.py  indexing.py  npdb.py
npdb/creation/: basic.py
npdb/db/: arraymap.py
npdb/dbarray/: arraymap.py  npdb.py
npdb/indexing/: indexing.py
npdb/manipulation/: views.py
tests/npdb_tests/core_tests/: test_dbarray.py  test_indexing.py
