[metadata]
name = setup.cfg
version = 0.1.dev
author = Ryan Wallace
author-email = ryanwallace@college.harvard.edu
summary = Parallel NumPy-like interface for large n-dimensional arrays stored on disk.
description-file = README.md
requires-dist = setuptools
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
